[package]
name = "smhkd"
version = "0.1.0"
description = "Simple MIDI hotkontrol daemon"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/smhkd"
homepage = "https://github.com/Arkanosis/smhkd"
repository = "https://github.com/Arkanosis/smhkd"

readme = "README.md"
license = "ISC"

keywords = ["midi", "daemon"]
categories = ["command-line-utilities"]

edition = "2018"

[dependencies]
docopt = "1.1"
serde = "1.0"
serde_derive = "1.0"
