[package]
name = "smhkd"
version = "0.2.0-dev"
description = "Simple MIDI hotkontrol daemon"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/smhkd"
homepage = "https://github.com/Arkanosis/smhkd"
repository = "https://github.com/Arkanosis/smhkd"

readme = "README.md"
license = "ISC"

keywords = ["midi", "daemon"]
categories = ["command-line-utilities"]

edition = "2021"

[dependencies]
alsa = "0.7"
docopt = "1.1"
serde = "1.0"
serde_derive = "1.0"
